--- a/SurrogateRank_tutorial.html
+++ b/SurrogateRank_tutorial.html
@@ -379,7 +379,7 @@ control group.</p>
 <pre class="r"><code>data(example.data)
 names(example.data)</code></pre>
 <pre><code>## [1] &quot;y1&quot; &quot;y0&quot; &quot;s1&quot; &quot;s0&quot;</code></pre>
-<p>Now, we calculate the metric <span class="math inline">\(delta\)</span> which measures the strength of the
+<p>Now, we calculate the metric <span class="math inline">\(\delta\)</span> which measures the strength of the
 surrogate using the function <strong>delta.calculate</strong>. This
 function requires the primary outcome and surrogate marker in each
 group, as shown below. The function returns the U-statistic for the
